crates/ars-components/src/utility/snapshots/ars_components__utility__separator__tests__separator_root_vertical.snap
---
source: crates/ars-components/src/utility/separator.rs
expression: "snapshot_attrs(&Api::new(vertical()).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-orientation",
            ),
            String(
                "vertical",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "separator",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "vertical",
            ),
        ),
        (
            Role,
            String(
                "separator",
            ),
        ),
    ],
    styles: [],
}
